--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-        <h1>Desarrollemos tu próximo proyecto juntos.</h1>
+        <h1>Desarrollemos tu próximo proyecto juntos. En proceso de construcción:)</h1>
         <div class="cta-container">
             <!-- <img src="tu-foto.jpg" alt="Tu Nombre" class="profile-pic"> -->
             <div class="cta-box">
