--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="logo">MR</div>
         <nav>
             <ul>
-                <li><a href="#about">Sobre mí</a></li>
-                <li><a href="#portfolio">Portafolio</a></li>
+                <li><a href="#about">Sobre mí y más</a></li>
+                <li><a href="#portfolio">Portafolio y más</a></li>
                 <li><a href="#skills">Habilidades</a></li>
                 <li><a href="#contact">Contacto</a></li>
             </ul>
